feat: :lipstick: Css Styles to index
the css styles was added to the index file to offer a better experience

--- a/index.html
+++ b/index.html
@@ -15,23 +15,30 @@
             <input placeholder="Add a task." type="search" name="" id="input__search" class="input__search">
             <button class="buttom">I Got This!</button>
         </div>
-        <span class="count__time">21/6/2024, 6:24:26</span>
         <section class="main__section__content">
-            <article class="to do task">
+            <span class="count__time">21/6/2024, 6:24:26</span>
+            <article class="to__do__task">
                 <p>Proyecto JavaScript</p>
-                <div>
-                    <img src="" alt="">
-                    <img src="" alt="">
+                <div class="to__do__buttons">
+                    <div class="check__to__do">
+                        <img src="storage/img/checkmark.svg" alt="">
+                    </div>
+                    <div class="trash__to__do">
+                        <img src="storage/img/trash.svg" alt="">
+                    </div>
                 </div>
             </article>
             <article class="mark__task">
                 <p>Proyecto JavaScript</p>
-                <div>
-                    <img src="" alt="">
-                    <img src="" alt="">
+                <div class="mark__buttoms">
+                    <div class="check__mark">
+                        <img src="storage/img/checkmark _mark.svg" alt="">
+                    </div>
+                    <div class="trash__mark">
+                        <img src="storage/img/trash_mark.svg" alt="">
+                    </div>
                 </div>
             </article>
-
         </section>
     </main>
 </body>
