feat: :sparkles: Get task by status
were added in components two files 'readyTask' in wich there is a function that bring only the tasks that have status ready and 'onHoldTasks that do the same but with onHold status

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <script type="module" src="js/main.js" defer></script>
 </head>
 <body>
     <header class="header">
@@ -28,6 +29,9 @@
                     </div>
                 </div>
             </article>
+            
+<!-- ---------------------------------------------------------------------------------------- -->
+            
             <article class="mark__task">
                 <p>Proyecto JavaScript</p>
                 <div class="mark__buttoms">
