feat: :sparkles: Status filter
The database in which the tasks will be collected was linked to the project, and two functions were added. These functions are responsible for printing the data in the HTML file: one prints tasks with a default style if their status is 'ready', while the other prints tasks with a style that strikes through the task name and makes the color more transparent if their status is 'onHold'. This distinction aims to visually differentiate between tasks marked as 'ready' and those on hold

--- a/index.html
+++ b/index.html
@@ -16,33 +16,36 @@
             <input placeholder="Add a task." type="search" name="" id="input__search" class="input__search">
             <button class="buttom">I Got This!</button>
         </div>
-        <section class="main__section__content">
-            <span class="count__time">21/6/2024, 6:24:26</span>
-            <article class="to__do__task">
-                <p>Proyecto JavaScript</p>
-                <div class="to__do__buttons">
-                    <div class="check__to__do">
-                        <img src="storage/img/checkmark.svg" alt="">
+        <span class="count__time">21/6/2024, 6:24:26</span>
+        <section id="main__section__content" class="main__section__content">
+            <section id="onHold__task" class="onHold__task">
+                <!-- <article class="to__do__task">
+                    <p>Proyecto JavaScript</p>
+                    <div class="to__do__buttons">
+                        <div class="check__to__do">
+                            <img src="storage/img/checkmark.svg" alt="">
+                        </div>
+                        <div class="trash__to__do">
+                            <img src="storage/img/trash.svg" alt="">
+                        </div>
                     </div>
-                    <div class="trash__to__do">
-                        <img src="storage/img/trash.svg" alt="">
-                    </div>
-                </div>
-            </article>
+                </article> -->
+            </section>
             
 <!-- ---------------------------------------------------------------------------------------- -->
-            
-            <article class="mark__task">
-                <p>Proyecto JavaScript</p>
-                <div class="mark__buttoms">
-                    <div class="check__mark">
-                        <img src="storage/img/checkmark _mark.svg" alt="">
+            <sectionr id="ready__Task" class="ready__Task">
+                <article class="mark__task">
+                    <p>Proyecto JavaScript</p>
+                    <div class="mark__buttoms">
+                        <div class="check__mark">
+                            <img src="storage/img/checkmark _mark.svg" alt="">
+                        </div>
+                        <div class="trash__mark">
+                            <img src="storage/img/trash_mark.svg" alt="">
+                        </div>
                     </div>
-                    <div class="trash__mark">
-                        <img src="storage/img/trash_mark.svg" alt="">
-                    </div>
-                </div>
-            </article>
+                </article>
+            </section>
         </section>
     </main>
 </body>
