feat: :sparkles: Add Task
In the project was added a function in wich the user through the input bar and the button, at the moment that the user press the button the text in the input will be added to the data base with a predeterminated id and with a default status (On Hold)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main class="main">
         <div class="input__section">
             <input placeholder="Add a task." type="search" name="" id="input__search" class="input__search">
-            <button class="buttom">I Got This!</button>
+            <button id="add__button" class="buttom">I Got This!</button>
         </div>
         <span class="count__time">21/6/2024, 6:24:26</span>
         <section id="main__section__content" class="main__section__content">
