feat: :sparkles: Show new task
in the event listener  was added a new function, printNewTask wich take as a argument the input value and show it in the task list

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             
 <!-- ---------------------------------------------------------------------------------------- -->
             <sectionr id="ready__Task" class="ready__Task">
-                <article class="mark__task">
+                <!-- <article class="mark__task">
                     <p>Proyecto JavaScript</p>
                     <div class="mark__buttoms">
                         <div class="check__mark">
@@ -44,7 +44,7 @@
                             <img src="storage/img/trash_mark.svg" alt="">
                         </div>
                     </div>
-                </article>
+                </article> -->
             </section>
         </section>
     </main>
