--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </section>
             
 <!-- ---------------------------------------------------------------------------------------- -->
-            <sectionr id="ready__Task" class="ready__Task">
+            <section id="ready__Task" class="ready__Task">
                 <!-- <article class="mark__task">
                     <p>Proyecto JavaScript</p>
                     <div class="mark__buttoms">
