feat: :sparkles: clock in realtime

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <input placeholder="Add a task." type="search" name="" id="input__search" class="input__search">
             <button id="add__button" class="buttom">I Got This!</button>
         </div>
-        <span class="count__time">21/6/2024, 6:24:26</span>
+        <span id="real__time__clock" class="count__time"></span>
         <section id="main__section__content" class="main__section__content">
             <section id="onHold__task" class="onHold__task">
                 <!-- <article class="to__do__task">
