chore: :truck: endpoints updated
th eendpoints that bring the data was changed by a remote data endpoint

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main class="main">
         <div class="input__section">
-            <input placeholder="Add a task." type="search" name="" id="input__search" class="input__search">
+            <input placeholder="Add a task." type="text" name="" id="input__search" class="input__search">
             <button id="add__button" class="buttom">I Got This!</button>
         </div>
         <span id="real__time__clock" class="count__time"></span>
