fix: :bug: commit de practica
se logro arreglar el bug de la multiple adicion de elementos al json al hacer un solo click

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <section id="main__section__content" class="main__section__content">
             <section id="onHold__task" class="onHold__task">
                 <!-- <article class="to__do__task">
-                    <p>Proyecto JavaScript</p>
+                    <p id="p">Proyecto JavaScript</p>
                     <div class="to__do__buttons">
-                        <div class="check__to__do">
+                        <div id="check__to__do" class="check__to__do">
                             <img src="storage/img/checkmark.svg" alt="">
                         </div>
                         <div class="trash__to__do">
@@ -38,7 +38,7 @@
                     <p>Proyecto JavaScript</p>
                     <div class="mark__buttoms">
                         <div class="check__mark">
-                            <img src="storage/img/checkmark _mark.svg" alt="">
+                            <img src="storage/img/checkmark_mark.svg" alt="">
                         </div>
                         <div class="trash__mark">
                             <img src="storage/img/trash_mark.svg" alt="">
